js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib2/l2.1.kt
fun test(): Int {
    return testStringProperty() +
            testIntProperty()
}
